tests/rosetta/out/Fortran/call-a-function-3.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program call_a_function_3
  implicit none
    integer, dimension(4) :: list
  call main()
  
  contains
  recursive integer function f() result(res)
    res = (/0,0.0/)
    return
  end function f
  recursive integer function g(a,b) result(res)
    integer, intent(in) :: a
    real, intent(in) :: b
    res = 0
    return
  end function g
  recursive subroutine h(s,nums)
    character(len=100), intent(in) :: s
    integer, intent(in) :: nums
  end subroutine h
  recursive subroutine main()
    call h('ex1',(//))
    call h('ex2',(/1,2/))
    call h('ex3',(/1,2,3,4/))
    list = (/1,2,3,4/)
    call h('ex4',list)
  end subroutine main
end program call_a_function_3
